# tikaPOC

./: .coverage  CONTRIBUTING.md  README.md  dump.rdb  logging_config.py  postgresql.conf  pyproject.toml  requirements.txt  topic_graph.html
.github/ISSUE_TEMPLATE/: bug_report.md
DLStudio-2.3.6/: DLStudio-2.3.6.html
DLStudio-2.3.6/DLStudio.egg-info/: PKG-INFO  SOURCES.txt
assets/d3/: bar_chart.html  bar_chart_dynamic.html
kos_connector/: fetch_anzsrc_topics.py  test.json  topics_matching.py
src/db/: erd.mmd  init.sql  populate_db.py
src/segmentation/: segmentation_agent.py
src/segmentation_main/: segmentation_demo.py
src/services/: acm_search.py  ams_search.py  chat_agent.py  config.py  feedback_service.py  fetch_conferences.py  fetch_grants.py  fetch_patents.py  fetch_persons.py  ieee_search.py  knowledge_graph.py  ml_topic_classifier.py  openalex_topics_processing.py  orcid_auth.py  topic_agent.py  topic_search.py
src/tests/: test_topic_agent.py
src/ui/: streamlit_app.py  visualization.py
src/utils/: cache.py  metrics.py
